messing with background pic color, fixing container spacing issue

--- a/less/styles.less
+++ b/less/styles.less
@@ -256,11 +256,6 @@ th, td{
     -o-background-size: cover;
 }
 
-#map {
-    width: 100%;
-    height: 200px;
-    margin-top: 100px;
-}
 
 @media(min-width:767px) {
     .content-section {
